--- a/f1sh/theme.jsonc
+++ b/f1sh/theme.jsonc
@@ -2,8 +2,18 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "kitty",
-    "source": "/usr/share/icons/garuda/dr460nized-fastfetch.png",
-    "width": 32
+    "source": "~/.config/omf/pkg/f1sh/va11-calicomp.png",
+    "width": 32,
+    "padding": {
+      "left": 1,
+      "right": 2
+    }
+  },
+  "display": {
+    "separator": " ",
+    "color": {
+        "keys": "bright_magenta"
+    }
   },
   "modules": [
     "break",
@@ -24,7 +34,7 @@
       "type": "command",
       "shell": "fish",
       "text": "set t drinks life; set r1 (random 1 1 2); set r2 (math 3 - $r1); printf 'Time to mix %s and change %s.' $t[$r1] $t[$r2]",
-      "key": "Jill"
+      "key": ">>"
     }
   ]
 }
